--- a/src/global.css
+++ b/src/global.css
@@ -14,6 +14,13 @@
   font-family: 'Roboto', sans-serif;
   text-decoration: none;
 }
+button {
+  background: none;
+  border: none;
+  color: inherit;
+  cursor: pointer;
+}
+
 
 .main-container {
   display: flex;
