--- a/src/components/ui/Dropdown/Dropdown.css
+++ b/src/components/ui/Dropdown/Dropdown.css
@@ -1,6 +1,6 @@
 .dropdown {
     background-color: #202c33;
-    padding: 15px;
+    padding: 5px 0px;
     border-radius: 15px;
     transition: all 800ms;
 }
