--- a/src/global.css
+++ b/src/global.css
@@ -14,16 +14,36 @@
   font-family: 'Roboto', sans-serif;
   text-decoration: none;
 }
+
 button {
   background: none;
   border: none;
   color: inherit;
   cursor: pointer;
 }
-
+a {
+  text-decoration: none;
+  color: inherit;
+}
 
 .main-container {
   display: flex;
   height: 100vh;
   color: #f6f6f6;
+}
+
+.dropdown-menu {
+  display: flex;
+  flex-direction: column;
+  color: #f6f6f6;
+  padding-top: 10px;
+}
+
+.dropdown-menu * {
+  padding: 5px 25px;
+}
+
+
+.dropdown-menu *:hover {
+  background-color: #111B1F;
 }
