--- a/src/components/ChatListWindow/ChatList/ChatList.css
+++ b/src/components/ChatListWindow/ChatList/ChatList.css
@@ -1,6 +1,7 @@
 .chatlist-window {
     min-width: 300px;
     width: 30%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -8,10 +9,22 @@
     overflow: scroll;
 }
 
+.chatlist-window.close {
+    translate: -100%;
+    transition: ease-in-out 200ms;
+}
+
 .chatlist-items-container {
     height: 100%;
 }
 
 
+@media screen and (max-width: 768px) {
+    .chatlist-window {
+        position: absolute;
+        width: 100%;
+        z-index: 100;
+    }
+}
 
 
