--- a/src/components/ChatWindow/Chat/Chat.css
+++ b/src/components/ChatWindow/Chat/Chat.css
@@ -3,8 +3,16 @@
     flex-direction: column;
     justify-content: space-between;
     height: 100vh;
-    width: 100%;
+    width: 70%;
     min-width: 300px;
     font-size: 16px;
 }
 
+
+@media screen and (max-width:768px) {
+    .chat-window {
+        
+        width: 100%;
+
+    }
+}
