--- a/src/global.css
+++ b/src/global.css
@@ -56,23 +56,18 @@ a {
 
 /* Scrollbar global */
 ::-webkit-scrollbar {
-  width: 12px;
+  width: 8px;
+  background-color: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #888;
+  background-color: var(--dark-blue);
   border-radius: 6px;
 }
 
-::-webkit-scrollbar-thumb:hover {
-  background-color: #555;
-}
+
 
 ::-webkit-scrollbar-track {
   background-color: #f1f1f1;
 }
 
-html {
-  scrollbar-width: thin;
-  scrollbar-color: #888 #f1f1f1;
-}
