--- a/src/components/ChatListWindow/ChatList/ChatList.css
+++ b/src/components/ChatListWindow/ChatList/ChatList.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     justify-content: space-between;
     background-color: #111B1F;
-    overflow: scroll;
+    overflow-y: scroll;
     transition: all 700ms;
 }
 .chatlist-window.close {
