--- a/src/global.css
+++ b/src/global.css
@@ -5,6 +5,7 @@
   --main-custom-green: #005c4b;
   --transparent-white: rgba(255, 255, 255, 0.6); 
   --dark-blue: #202c33;
+  --logo-green: #23d366;
 }
 
 * {
