--- a/src/components/ChatListWindow/ChatItem/ChatItem.css
+++ b/src/components/ChatListWindow/ChatItem/ChatItem.css
@@ -1,6 +1,7 @@
 .chat-item {
     font-size: 12px;
     display: flex;
+    justify-content: center;
     gap: 10px;
     align-items: center;
     padding: 10px 15px;
@@ -20,16 +21,17 @@
 }
 
 
-.profile-picture {
-    width: 40px;
-    height: 40px;
-    border-radius: 50px;
-    overflow: hidden;
-}
 
-.profile-picture img {
-    width: 100%;
+.user-avatar {
+    width: 30px;
+    height: 30px;
+    overflow: hidden;
+    border-radius: 50px;
+    flex-shrink: 0
+}
+.user-avatar img {
     height: 100%;
+    width: 100%;
     object-fit: cover;
 }
 
