--- a/src/components/UserList/UserList.css
+++ b/src/components/UserList/UserList.css
@@ -75,18 +75,19 @@
 }
 
 
-.profile-picture {
-    width: 40px;
-    height: 40px;
-    border-radius: 50px;
+.user-avatar {
+    width: 30px;
+    height: 30px;
     overflow: hidden;
+    border-radius: 50px;
+    flex-shrink: 0
 }
-
-.profile-picture img {
-    width: 100%;
+.user-avatar img {
     height: 100%;
+    width: 100%;
     object-fit: cover;
 }
+
 
 .chat-item-info {
     width: 100%;
