--- a/src/components/ui/Dropdown/Dropdown.css
+++ b/src/components/ui/Dropdown/Dropdown.css
@@ -1,9 +1,11 @@
 .dropdown {
     background-color: #202c33;
     padding: 5px 0px;
-    border-radius: 15px;
     transition: all 800ms;
     z-index: 20;
+    font-size: 15px;
+    box-shadow: 2px 2px 40px black;
+
 }
 
 .dropdown-btn {
